syntax = "proto3";
package coreum.customparams.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "coreum/customparams/v1/params.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/customparams/types";

// Query defines the gRPC querier service.
service Query {
  // StakingParams queries the staking parameters of the module.
  rpc StakingParams(QueryStakingParamsRequest) returns (QueryStakingParamsResponse) {
    option (google.api.http).get = "/coreum/customparams/v1/stakingparams";
  }
}

// QueryStakingParamsRequest defines the request type for querying x/customparams staking parameters.
message QueryStakingParamsRequest {}

// QueryStakingParamsResponse defines the response type for querying x/customparams staking parameters.
message QueryStakingParamsResponse {
  StakingParams params = 1 [(gogoproto.nullable) = false];
}
